--- a/bin/view/CreateProject.fxml
+++ b/bin/view/CreateProject.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.createProjectController">
+<AnchorPane fx:id="projectMenuBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.createProjectController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="41.0" layoutY="25.0" text="Create a new project">
          <font>
@@ -30,7 +30,7 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <DatePicker layoutX="50.0" layoutY="273.0" prefHeight="40.0" prefWidth="283.0" />
+      <DatePicker fx:id="datePick" editable="false" layoutX="50.0" layoutY="273.0" onAction="#dateEnteredOp" prefHeight="40.0" prefWidth="283.0" promptText="" />
       <Label alignment="TOP_LEFT" layoutX="48.0" layoutY="358.0" text="Project Description">
          <font>
             <Font size="30.0" />
@@ -38,5 +38,10 @@
       </Label>
       <TextArea layoutX="53.0" layoutY="411.0" prefHeight="185.0" prefWidth="675.0" />
       <Button layoutX="31.0" layoutY="752.0" mnemonicParsing="false" onAction="#backFromCreateProjectOp" text="Back" />
+      <Button layoutX="267.0" layoutY="693.0" mnemonicParsing="false" onAction="#confirmNewProjectOp" prefHeight="45.0" prefWidth="224.0" text="Confirm">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
