--- a/bin/view/CreateProject.fxml
+++ b/bin/view/CreateProject.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="projectMenuBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.createProjectController">
+<AnchorPane fx:id="projectMenuBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.createProjectController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="41.0" layoutY="25.0" text="Create a new project">
+      <Label alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="236.0" layoutY="39.0" text="Create A New Project" textFill="#0095ff">
          <font>
             <Font name="Arial" size="36.0" />
          </font>
@@ -20,7 +20,7 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <TextField layoutX="46.0" layoutY="158.0" promptText="required">
+      <TextField fx:id="projectName" layoutX="46.0" layoutY="158.0" promptText="required">
          <font>
             <Font size="24.0" />
          </font>
@@ -36,9 +36,9 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <TextArea layoutX="53.0" layoutY="411.0" prefHeight="185.0" prefWidth="675.0" />
-      <Button layoutX="31.0" layoutY="752.0" mnemonicParsing="false" onAction="#backFromCreateProjectOp" text="Back" />
-      <Button layoutX="267.0" layoutY="693.0" mnemonicParsing="false" onAction="#confirmNewProjectOp" prefHeight="45.0" prefWidth="224.0" text="Confirm">
+      <TextArea fx:id="projectDesc" layoutX="53.0" layoutY="411.0" prefHeight="185.0" prefWidth="675.0" />
+      <Button layoutX="31.0" layoutY="752.0" mnemonicParsing="false" onAction="#backFromCreateProjectOp" text="Back" textFill="RED" />
+      <Button fx:id="confirmButton" layoutX="267.0" layoutY="693.0" mnemonicParsing="false" onAction="#confirmNewProjectOp" prefHeight="45.0" prefWidth="224.0" text="Confirm" textFill="#13bc00">
          <font>
             <Font size="24.0" />
          </font>
