--- a/bin/view/Main.fxml
+++ b/bin/view/Main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="mainBox" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.MainController">
+<HBox fx:id="mainBox" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.MainController">
    <children>
       <AnchorPane prefHeight="800.0" prefWidth="800.0">
          <children>
@@ -23,6 +23,7 @@
                <font>
                   <Font size="20.0" />
                </font></Button>
+            <Button layoutX="680.0" layoutY="84.0" mnemonicParsing="false" onAction="#createTicketOP" prefHeight="39.0" prefWidth="106.0" text="Create Ticket" />
          </children>
       </AnchorPane>
    </children>
