--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -10,7 +10,7 @@
    <children>
       <AnchorPane prefHeight="800.0" prefWidth="800.0">
          <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="324.0" layoutY="236.0" mnemonicParsing="false" onAction="#createProjectOp" text="Create Project" textFill="#0095ff">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="308.0" layoutY="238.0" mnemonicParsing="false" onAction="#createProjectOp" prefHeight="40.0" prefWidth="180.0" text="Create Project" textFill="#0095ff">
                <font>
                   <Font size="20.0" />
                </font></Button>
@@ -19,11 +19,24 @@
                   <Font size="50.0" />
                </font>
             </Label>
-            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="325.0" layoutY="308.0" mnemonicParsing="false" onAction="#showProjectsOp" text="Show Projects" textFill="#0095ff">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="308.0" layoutY="294.0" mnemonicParsing="false" onAction="#showProjectsOp" prefHeight="40.0" prefWidth="180.0" text="Show Projects" textFill="#0095ff">
                <font>
                   <Font size="20.0" />
                </font></Button>
-            <Button layoutX="680.0" layoutY="84.0" mnemonicParsing="false" onAction="#createTicketOP" prefHeight="39.0" prefWidth="106.0" text="Create Ticket" />
+            <Button layoutX="308.0" layoutY="400.0" mnemonicParsing="false" onAction="#createTicketOP" prefHeight="40.0" prefWidth="180.0" text="Create Ticket" textFill="#0095ff">
+               <font>
+                  <Font size="20.0" />
+               </font></Button>
+            <Button layoutX="308.0" layoutY="453.0" mnemonicParsing="false" onAction="#createCommentOP" prefHeight="40.0" prefWidth="180.0" text="Create Comment" textFill="#0095ff">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="308.0" layoutY="347.0" mnemonicParsing="false" onAction="#showTicketsOp" prefHeight="40.0" prefWidth="180.0" text="Show Tickets" textFill="#0095ff">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
