--- a/resources/view/CreateComment.fxml
+++ b/resources/view/CreateComment.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ticketMenuBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.CreateCommentController">
+<AnchorPane fx:id="ticketMenuBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.CreateCommentController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="236.0" layoutY="39.0" text="Create A New Comment" textAlignment="JUSTIFY" textFill="#0095ff">
          <font>
@@ -16,19 +16,19 @@
          </font>
       </Label>
       <Button layoutX="14.0" layoutY="760.0" mnemonicParsing="false" onAction="#backButtonPressedOP" text="Back" textFill="RED" />
-      <Label layoutX="29.0" layoutY="133.0" prefHeight="26.0" prefWidth="182.0" text="Select Ticket Under*">
+      <Label layoutX="29.0" layoutY="133.0" prefHeight="26.0" prefWidth="182.0" text="Select Project*">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="date" layoutX="30.0" layoutY="235.0" prefHeight="35.0" prefWidth="241.0" />
-      <Label layoutX="32.0" layoutY="206.0" prefHeight="26.0" prefWidth="182.0" text="Date">
+      <TextField fx:id="date" layoutX="24.0" layoutY="309.0" prefHeight="35.0" prefWidth="241.0" />
+      <Label layoutX="24.0" layoutY="277.0" prefHeight="26.0" prefWidth="182.0" text="Date">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextArea fx:id="commentDescription" layoutX="31.0" layoutY="324.0" prefHeight="200.0" prefWidth="590.0" />
-      <Label layoutX="28.0" layoutY="294.0" prefHeight="26.0" prefWidth="213.0" text="Enter Comment Description">
+      <TextArea fx:id="commentDescription" layoutX="27.0" layoutY="400.0" prefHeight="200.0" prefWidth="590.0" />
+      <Label layoutX="24.0" layoutY="361.0" prefHeight="26.0" prefWidth="213.0" text="Enter Comment Description">
          <font>
             <Font size="18.0" />
          </font>
@@ -39,5 +39,11 @@
          </font>
       </Button>
       <ChoiceBox fx:id="projectBox" layoutX="28.0" layoutY="159.0" prefHeight="26.0" prefWidth="182.0" />
+      <ChoiceBox fx:id="ticketBox" layoutX="28.0" layoutY="232.0" prefHeight="26.0" prefWidth="182.0" />
+      <Label layoutX="28.0" layoutY="206.0" prefHeight="26.0" prefWidth="182.0" text="Select Ticket*">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
