--- a/resources/view/CreateComment.fxml
+++ b/resources/view/CreateComment.fxml
@@ -2,33 +2,34 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="ticketMenuBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.CreateCommentController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="236.0" layoutY="39.0" text="Create A New Comment" textAlignment="JUSTIFY" textFill="#0095ff">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="101.0" stroke="BLACK" strokeType="INSIDE" width="800.0" />
+      <Label alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="205.0" layoutY="112.0" text="Create A New Comment" textAlignment="JUSTIFY" textFill="#0095ff">
          <font>
             <Font name="Arial" size="36.0" />
          </font>
       </Label>
-      <Button layoutX="14.0" layoutY="760.0" mnemonicParsing="false" onAction="#backButtonPressedOP" text="Back" textFill="RED" />
-      <Label layoutX="29.0" layoutY="133.0" prefHeight="26.0" prefWidth="182.0" text="Select Project*">
+      <Button layoutX="722.0" layoutY="38.0" mnemonicParsing="false" onAction="#backButtonPressedOP" text="Back" textFill="RED" />
+      <Label layoutX="31.0" layoutY="167.0" prefHeight="26.0" prefWidth="182.0" text="Select Project*">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="date" layoutX="24.0" layoutY="309.0" prefHeight="35.0" prefWidth="241.0" />
-      <Label layoutX="24.0" layoutY="277.0" prefHeight="26.0" prefWidth="182.0" text="Date">
+      <Label layoutX="26.0" layoutY="311.0" prefHeight="26.0" prefWidth="182.0" text="Date">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextArea fx:id="commentDescription" layoutX="27.0" layoutY="400.0" prefHeight="200.0" prefWidth="590.0" />
-      <Label layoutX="24.0" layoutY="361.0" prefHeight="26.0" prefWidth="213.0" text="Enter Comment Description">
+      <TextArea fx:id="commentDescription" layoutX="29.0" layoutY="434.0" prefHeight="200.0" prefWidth="693.0" />
+      <Label layoutX="26.0" layoutY="395.0" prefHeight="26.0" prefWidth="213.0" text="Enter Comment Description">
          <font>
             <Font size="18.0" />
          </font>
@@ -38,11 +39,17 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <ChoiceBox fx:id="projectBox" layoutX="28.0" layoutY="159.0" prefHeight="26.0" prefWidth="182.0" />
-      <ChoiceBox fx:id="ticketBox" layoutX="28.0" layoutY="232.0" prefHeight="26.0" prefWidth="182.0" />
-      <Label layoutX="28.0" layoutY="206.0" prefHeight="26.0" prefWidth="182.0" text="Select Ticket*">
+      <ChoiceBox fx:id="projectBox" layoutX="30.0" layoutY="193.0" prefHeight="26.0" prefWidth="182.0" />
+      <ChoiceBox fx:id="ticketBox" layoutX="30.0" layoutY="266.0" prefHeight="26.0" prefWidth="182.0" />
+      <Label layoutX="30.0" layoutY="240.0" prefHeight="26.0" prefWidth="182.0" text="Select Ticket*">
          <font>
             <Font size="18.0" />
+         </font>
+      </Label>
+      <DatePicker fx:id="date" disable="true" editable="false" layoutX="28.0" layoutY="337.0" />
+      <Label contentDisplay="CENTER" layoutX="14.0" layoutY="5.0" text="Bug Guard" textAlignment="CENTER" textFill="#0095ff">
+         <font>
+            <Font name="Baloo Da 2 ExtraBold" size="50.0" />
          </font>
       </Label>
    </children>
