--- a/resources/view/ShowProjects.fxml
+++ b/resources/view/ShowProjects.fxml
@@ -5,18 +5,25 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="projectMenuBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.ShowProjectsController">
    <children>
-      <Button layoutX="31.0" layoutY="752.0" mnemonicParsing="false" onAction="#backFromCreateProjectOp" text="Back" textFill="#f70000" />
-      <ListView fx:id="projectListView" layoutX="215.0" layoutY="150.0" prefHeight="567.0" prefWidth="389.0" />
-      <Label layoutX="317.0" layoutY="34.0" text="All Projects" textFill="#0095ff">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="101.0" layoutX="-6.0" layoutY="-1.0" stroke="BLACK" strokeType="INSIDE" width="807.0" />
+      <Button layoutX="711.0" layoutY="37.0" mnemonicParsing="false" onAction="#backFromCreateProjectOp" text="Back" textFill="#f70000" />
+      <ListView fx:id="projectListView" layoutX="217.0" layoutY="248.0" prefHeight="508.0" prefWidth="389.0" />
+      <Label layoutX="319.0" layoutY="132.0" text="All Projects" textFill="#0095ff">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
-      <TextField fx:id="searchBar" layoutX="152.0" layoutY="103.0" prefHeight="34.0" prefWidth="418.0" />
-      <Button layoutX="584.0" layoutY="103.0" mnemonicParsing="false" onAction="#searchButtonOP" prefHeight="32.0" prefWidth="66.0" text="Search" />
+      <TextField fx:id="searchBar" layoutX="154.0" layoutY="201.0" prefHeight="34.0" prefWidth="418.0" />
+      <Button layoutX="586.0" layoutY="201.0" mnemonicParsing="false" onAction="#searchButtonOP" prefHeight="32.0" prefWidth="66.0" text="Search" />
+      <Label contentDisplay="CENTER" layoutX="8.0" layoutY="4.0" text="Bug Guard" textAlignment="CENTER" textFill="#0095ff">
+         <font>
+            <Font name="Baloo Da 2 ExtraBold" size="50.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
