--- a/resources/view/ShowProjectsTable.fxml
+++ b/resources/view/ShowProjectsTable.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="projectMenuBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1200.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.ShowProjectsTableController">
+<AnchorPane fx:id="projectMenuBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="885.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.ShowProjectsTableController">
     <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" height="101.0" layoutX="-2.0" layoutY="-3.0" stroke="BLACK" strokeType="INSIDE" width="1200.0" />
+        <Rectangle arcHeight="5.0" arcWidth="5.0" height="101.0" layoutX="-2.0" layoutY="-3.0" stroke="BLACK" strokeType="INSIDE" width="1206.0" />
         <Label contentDisplay="CENTER" graphicTextGap="0.0" layoutX="10.0" layoutY="2.0" text="Bug Guard" textAlignment="CENTER" textFill="#0095ff">
             <font>
                 <Font name="Baloo Da 2 ExtraBold" size="50.0" />
@@ -28,45 +28,45 @@
         </Label>
         <TextField fx:id="searchBar" layoutX="40.0" layoutY="184.0" prefHeight="34.0" prefWidth="418.0" />
         <Button layoutX="458.0" layoutY="185.0" mnemonicParsing="false" onAction="#searchButtonOP" prefHeight="32.0" prefWidth="66.0" text="Search" />
-      <AnchorPane layoutX="40.0" layoutY="255.0" prefHeight="907.0" prefWidth="440.0" style="-fx-border-color: #0095ff; -fx-border-width: 2;">
+      <AnchorPane layoutX="40.0" layoutY="255.0" prefHeight="594.0" prefWidth="440.0" style="-fx-border-color: #0095ff; -fx-border-width: 2;">
          <children>
-            <Text layoutX="27.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Project Name">
+            <Text layoutX="24.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Project Name">
                <font>
                   <Font size="20.0" />
                </font>
             </Text>
-            <TextField fx:id="txtProjectName" layoutX="27.0" layoutY="102.0" prefHeight="40.0" prefWidth="300.0">
+            <TextField fx:id="txtProjectName" layoutX="24.0" layoutY="53.0" prefHeight="40.0" prefWidth="300.0">
                <font>
                   <Font size="20.0" />
                </font>
             </TextField>
-            <Text layoutX="27.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
+            <Text layoutX="24.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
                <font>
                   <Font size="20.0" />
                </font>
             </Text>
-            <DatePicker fx:id="txtDate" disable="false" editable="true" layoutX="27.0" layoutY="224.0" prefHeight="40.0" prefWidth="300.0" />
-            <Text layoutX="27.0" layoutY="318.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description">
+            <DatePicker fx:id="txtDate" disable="false" editable="true" layoutX="24.0" layoutY="175.0" prefHeight="40.0" prefWidth="300.0" />
+            <Text layoutX="29.0" layoutY="253.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description">
                <font>
                   <Font size="20.0" />
                </font>
             </Text>
-            <TextArea fx:id="txtDescription" layoutX="26.0" layoutY="343.0" prefHeight="473.0" prefWidth="389.0" />
-            <Button fx:id="SaveChanges" layoutX="27.0" layoutY="839.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="155.0" text="Save Changes" onAction="#saveChanges">
+            <TextArea fx:id="txtDescription" layoutX="28.0" layoutY="278.0" prefHeight="243.0" prefWidth="389.0" />
+            <Button fx:id="SaveChanges" layoutX="33.0" layoutY="531.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="40.0" prefWidth="155.0" text="Save Changes">
                <font>
                   <Font size="20.0" />
                </font>
             </Button>
-            <Button fx:id="DeleteProject" layoutX="260.0" layoutY="839.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="155.0" text="Delete" onAction="#deleteProject">
+            <Button fx:id="DeleteProject" layoutX="245.0" layoutY="532.0" mnemonicParsing="false" onAction="#deleteProject" prefHeight="40.0" prefWidth="155.0" text="Delete">
                <font>
                   <Font size="20.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="491.0" layoutY="255.0" prefHeight="907.0" prefWidth="677.0" style="-fx-border-color: #0095ff; -fx-border-width: 2;">
+      <AnchorPane layoutX="491.0" layoutY="255.0" prefHeight="593.0" prefWidth="677.0" style="-fx-border-color: #0095ff; -fx-border-width: 2;">
          <children>
-            <TableView fx:id="tbProjects" layoutX="23.0" layoutY="26.0" onMouseClicked="#getitem" prefHeight="858.0" prefWidth="630.0">
+            <TableView fx:id="tbProjects" layoutX="23.0" layoutY="26.0" onMouseClicked="#getitem" prefHeight="527.0" prefWidth="630.0">
               <columns>
                 <TableColumn fx:id="colProjectName" prefWidth="221.0" text="Project Name" />
                 <TableColumn fx:id="colDate" minWidth="0.0" prefWidth="108.0" text="Date" />
